[package]
name = "termination_signal"
version = "0.1.2"
edition = "2021"
authors = ["MoghTech"]
description = "sync and async termination signal listeners"
repository = "https://github.com/mbecker20/termination_signal"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
signal-hook = { version = "0.3" }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"], optional = true }
tokio = { version = "1.28", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }


[features]
default = ["sync", "tokio"]
sync = []
tokio = ["dep:tokio", "dep:signal-hook-tokio", "dep:futures"]